fixed image height issue on Safari

--- a/src/assets/styles/Styles.sass
+++ b/src/assets/styles/Styles.sass
@@ -342,7 +342,7 @@
     .project-img
         max-width: 100%
         object-fit: cover
-        height: 100%
+        max-height: 100%
         transition: all 0.4s ease
         opacity: 0.7
 
